--- a/app/views/decks/show.erb
+++ b/app/views/decks/show.erb
@@ -1,8 +1,94 @@
-<% @deck.photos.each do |photo| %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Dochi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
-<%= image_tag photo.photo_image.thumb('300x400#').url %>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
+<style>
 
-<% end %>
+.btn-like {
+  color: #9fa1a3;
+  background-color: #ededee;
+  border-color: #ededee;
+}
 
+body {
+  padding-top: 70px;
+}
 
+</style>
+  </head>
+  <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=650328904977570";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Dochi</a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <!-- Main component for a primary marketing message or call to action -->
+      <!-- <div class="jumbotron"> -->
+        <p class="lead">Ask your friends "Which one do you like?"</p>
+        <div class="row">
+          <div class="col-md-8">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <div class="row">
+                  <div class="col-md-10"><img src="<%= @deck.user.avatar_url %>" style="width:30px"></div>
+                  <div class="col-md-2"><%= @deck.distance_of_created %></div>
+                </div>
+              </div>
+              <div class="panel-body">
+                <div class="row">
+                  <% @deck.photos.each do |photo| %>
+                  <div class="col-md-6">
+                    <div class="thumbnail">
+                      <%= image_tag photo.photo_image.thumb('300x400#').url %>
+                      <div class="caption">
+                        <p><a href="todo" class="btn btn-like"><img src="/like_off.png" style="width:15px; padding-bottom:2px; margin-right:5px;">Like</a></p>
+                      </div>
+                    </div>
+                  </div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <a href="todo"><img src="/Download_on_the_App_Store_Badge_US-UK_135x40.png"></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="fb-like" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="true" data-send="false"></div>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="higepon">Tweet</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+          </div>
+          <div class="col-md-4"></div>
+        </div>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  </body>
+</html>
