--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -6,6 +6,10 @@
     <% @deck.photos.each do |photo| %>
       <meta property="og:image" content="http://dochi.herokuapp.com<%= photo.photo_image.thumb('300x400#').url %>"/>
     <% end %>    
+    <meta property="og:title" content="Which one do you like? - Dochi"/>
+    <meta property="og:type" content="dochi:photo"/>
+    <meta property="og:url" content="http://dochi.herokuapp.com/deck/<%= @dock.url_key %>"/>
+    <meta property="fb:app_id" content="650328904977570" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
