--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -8,7 +8,7 @@
     <% end %>    
     <meta property="og:title" content="Which one do you like? - Dochi"/>
     <meta property="og:type" content="dochi:photo"/>
-    <meta property="og:url" content="http://dochi.herokuapp.com/deck/<%= @dock.url_key %>"/>
+    <meta property="og:url" content="http://dochi.herokuapp.com/deck/<%= @deck.url_key %>"/>
     <meta property="fb:app_id" content="650328904977570" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
