--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -13,7 +13,7 @@
     
     <meta name="twitter:card" content="gallery">
     <meta name="twitter:title" content="Which one do you like?">
-    <meta name="twitter:description" content="Using Dochi App, you can ask your friends 'Which one do you like?'">
+    <!-- <meta name="twitter:description" content="Using Dochi App, you can ask your friends 'Which one do you like?'"> -->
     <meta name="twitter:image0" content="http://dochi.herokuapp.com<%= @deck.photos[0].photo_image.thumb('300x400#').url %>">
     <meta name="twitter:image1" content="http://dochi.herokuapp.com<%= @deck.photos[1].photo_image.thumb('300x400#').url %>">
     <!-- Bootstrap -->
