--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -77,7 +77,7 @@ body {
                     <div class="thumbnail">
                       <%= image_tag photo.photo_image.thumb('300x400#').url %>
                       <div class="caption">
-                        <p><a href="todo" class="btn btn-like"><img src="/like_off.png" style="width:15px; padding-bottom:2px; margin-right:5px;">Like</a></p>
+                        <p><a href="https://itunes.apple.com/app/dochi/id727405659" class="btn btn-like"><img src="/like_off.png" style="width:15px; padding-bottom:2px; margin-right:5px;">Like</a></p>
                       </div>
                     </div>
                   </div>
@@ -87,7 +87,7 @@ body {
             </div>
           </div>
           <div class="col-md-4">
-            <a href="todo"><img src="/Download_on_the_App_Store_Badge_US-UK_135x40.png"></a>
+            <a href="https://itunes.apple.com/app/dochi/id727405659"><img src="/Download_on_the_App_Store_Badge_US-UK_135x40.png"></a>
           </div>
         </div>
         <div class="row">
