--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -38,6 +38,10 @@ body {
 }
 
 </style>
+<!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
+typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
+b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
+mixpanel.init("ae4a392cd2105add1f346b648b316b30");</script><!-- end Mixpanel -->
   </head>
   <body>
     <div id="fb-root"></div>
@@ -77,7 +81,7 @@ body {
                     <div class="thumbnail">
                       <%= image_tag photo.photo_image.thumb('300x400#').url %>
                       <div class="caption">
-                        <p><a href="https://itunes.apple.com/app/dochi/id727405659" class="btn btn-like"><img src="/like_off.png" style="width:15px; padding-bottom:2px; margin-right:5px;">Like</a></p>
+                        <p><a id="like_link" href="https://itunes.apple.com/app/dochi/id727405659" class="btn btn-like"><img src="/like_off.png" style="width:15px; padding-bottom:2px; margin-right:5px;">Like</a></p>
                       </div>
                     </div>
                   </div>
@@ -87,7 +91,7 @@ body {
             </div>
           </div>
           <div class="col-md-4">
-            <a href="https://itunes.apple.com/app/dochi/id727405659"><img src="/Download_on_the_App_Store_Badge_US-UK_135x40.png"></a>
+            <a id="app_link" href="https://itunes.apple.com/app/dochi/id727405659"><img src="/Download_on_the_App_Store_Badge_US-UK_135x40.png"></a>
           </div>
         </div>
         <div class="row">
@@ -104,5 +108,13 @@ body {
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+      mixpanel.track_links("#like_link", "click like link", {
+        referrer: document.referrer
+      });
+      mixpanel.track_links("#app_link", "click app link", {
+        referrer: document.referrer
+      });
+    </script>
   </body>
 </html>
