--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -6,17 +6,17 @@
     <% i0 = @deck.photos[0].id %>
     <% i1 = @deck.photos[1].id %>
     <% p0 = @deck.photos[0].photo_image %>
-    <meta property="og:image" content="http://dochi.herokuapp.com<%= p0.process(:append, i0, i1).thumb('300x400').url %>"/>
+    <meta property="og:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>"/>
     <meta property="og:title" content="Which one do you like? - Dochi"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://dochi.herokuapp.com/deck/<%= @deck.url_key %>"/>
+    <meta property="og:url" content="http://dochi.monaos.org/deck/<%= @deck.url_key %>"/>
     <meta property="fb:app_id" content="650328904977570" />
     
     <meta name="twitter:card" content="gallery">
     <meta name="twitter:title" content="Which one do you like?">
     <!-- <meta name="twitter:description" content="Using Dochi App, you can ask your friends 'Which one do you like?'"> -->
-    <meta name="twitter:image0" content="http://dochi.herokuapp.com<%= @deck.photos[0].photo_image.thumb('300x400').url %>">
-    <meta name="twitter:image1" content="http://dochi.herokuapp.com<%= @deck.photos[1].photo_image.thumb('300x400').url %>">
+    <meta name="twitter:image0" content="http://dochi.monaos.org<%= @deck.photos[0].photo_image.thumb('300x400').url %>">
+    <meta name="twitter:image1" content="http://dochi.monaos.org<%= @deck.photos[1].photo_image.thumb('300x400').url %>">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
