--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -13,11 +13,11 @@
     <meta name="twitter:image:height" content="800">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>"/>
-    <meta property="og:title" content="Which one do you like? - Dochi"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://dochi.monaos.org/deck/<%= @deck.url_key %>"/>
-    <meta property="fb:app_id" content="650328904977570" />
+    <meta property="og:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>">
+    <meta property="og:title" content="Which one do you like? - Dochi">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://dochi.monaos.org/deck/<%= @deck.url_key %>">
+    <meta property="fb:app_id" content="650328904977570">
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
