--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -1,6 +1,6 @@
-<!DOCTYPE html />
-<html />
-  <head />
+<!DOCTYPE html>
+<html>
+  <head>
     <title>Dochi</title>
     <% i0 = @deck.photos[0].id %>
     <% i1 = @deck.photos[1].id %>
