--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Dochi</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+
     <% i0 = @deck.photos[0].id %>
     <% i1 = @deck.photos[1].id %>
     <% p0 = @deck.photos[0].photo_image %>
@@ -41,18 +45,18 @@ body {
 
 </style>
 <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
-typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
-b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
-mixpanel.init("ae4a392cd2105add1f346b648b316b30");</script><!-- end Mixpanel -->
+typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.tostring=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.tostring=function(){return c.tostring(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
+b._i.push([a,e,d])};b.__sv=1.2}})(document,window.mixpanel||[]);
+mixpanel.init("ae4a392cd2105add1f346b648b316b30");</script><!-- end mixpanel -->
   </head>
   <body>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=650328904977570";
-      fjs.parentNode.insertBefore(js, fjs);
+      var js, fjs = d.getelementsbytagname(s)[0];
+      if (d.getelementbyid(id)) return;
+      js = d.createelement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_us/all.js#xfbml=1&appid=650328904977570";
+      fjs.parentnode.insertbefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- Fixed navbar -->
