--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -14,7 +14,7 @@
     <meta name="twitter:site" content="@examplephotosite">
     <meta name="twitter:creator" content="@sippey">
     <meta name="twitter:title" content="Good Morning, San Francisco">
-    <meta name="twitter:image" content="http://example.com/photo/a/image.jpg">
+    <meta name="twitter:image" content="http://dochi.monaos.org/media/W1siZiIsIjIwMTMvMTEvMTcvMjMvMDIvMDEvMTgyL2tlaWtvIl0sWyJwIiwidGh1bWIiLCIzMDB4NDAwIyJdXQ">
     <meta name="twitter:image:width" content="610">
     <meta name="twitter:image:height" content="610">
 
