--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -1,46 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dochi</title>
-    <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-
     <% i0 = @deck.photos[0].id %>
     <% i1 = @deck.photos[1].id %>
     <% p0 = @deck.photos[0].photo_image %>
 
-						<meta property="og:title" content="Nella foresta di Lokobe..." />
-							<meta property="og:type" content="flickr_photos:photo" />
-							<meta property="og:url" content="http://www.flickr.com/photos/neera/8063633289/" />
-							<meta property="og:site_name" content="Flickr" />
-							<meta property="twitter:card" content="photo" />
-							<meta property="twitter:site" content="@flickr" />
-							<meta property="twitter:app:name:iphone" content="Flickr" />
-							<meta property="twitter:app:id:iphone" content="328407587" />
-							<meta property="og:description" content="Lo straordinario mimetismo dell'Uroplatus Sikorae (specie endemica esclusivamente del Madagascar). Si confonde perfettamente con la corteccia degli alberi, sopravvivendo, a stento, all'estinzione. Mentre la guida ce lo mostrava, su un tronco alto,  non riuscivamo a vederlo... Piccolo coccodrillo silvano, drago di legno ( è un grande geco, in realtà), è ricercatissimo dai bracconieri. Ma non sta meglio dov'è? Che senso ha tenerlo in un terrario? " />
-							<meta property="og:image" content="http://farm9.staticflickr.com/8029/8063633289_2cb362749f_z.jpg" />
-							<meta property="og:image:width" content="640" />
-							<meta property="og:image:height" content="599" />
-							<meta property="flickr_photos:by" content="http://www.flickr.com/people/neera/" />
-							<meta property="flickr_photos:camera" content="http://www.flickr.com/cameras/nikon/d300s/" />
-							<meta property="flickr_photos:galleries" content="http://www.flickr.com/photos/mylittlecornersg/galleries/72157636496016193" />
-				<meta property="flickr_photos:galleries" content="http://www.flickr.com/photos/107149736@N05/galleries/72157637394624726" />
-				<meta property="flickr_photos:galleries" content="http://www.flickr.com/photos/107399428@N08/galleries/72157637313267533" />
-				<meta property="flickr_photos:galleries" content="http://www.flickr.com/photos/deeg_quest/galleries/72157636836604644" />
-				<meta property="flickr_photos:galleries" content="http://www.flickr.com/photos/100629009@N07/galleries/72157636603696563" />
-							<meta property="flickr_photos:location:latitude" content="-13.393627" />
-							<meta property="flickr_photos:location:longitude" content="48.343105" />
-							<meta property="twitter:description" content="Lo straordinario mimetismo dell'Uroplatus Sikorae (specie endemica esclusivamente del Madagascar). Si confonde perfettamente con la corteccia degli alberi, sopravvivendo, a stento, all'estinzione. Mentre la guida ce lo mostrava, su un tronco alto,  non riuscivamo a vederlo... Piccolo coccodrillo silvano, drago di legno ( è un grande geco, in realtà), è ricercatissimo dai bracconieri. Ma non sta meglio dov'è? Che senso ha tenerlo in un terrario? " />
-							<meta property="twitter:app:url:iphone" content="flickr://flickr.com/photos/neera/8063633289/" />
-			
-	<meta name="viewport" content="width=1036">
-<meta name="application-name" content="Nella foresta di Lokobe... | Flickr - Photo Sharing!"/>
-<meta name="msapplication-TileColor" content="#ffffff"/>
-<meta name="msapplication-TileImage" content="http://l.yimg.com/g/images/favicon-msapplication-tileimage.png"/>
+    <meta name="twitter:card"  content="photo" />
+    <meta name="twitter:title" content="Which one do you like?" />
+    <meta name="twitter:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>" />
+    <meta property="og:title" content="Which one do you like? - Dochi" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://dochi.monaos.org/deck/<%= @deck.url_key %>" />
+    <meta property="fb:app_id" content="650328904977570" />
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+
+    <title>Dochi</title>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
