fixed. content-type.

--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -7,8 +7,9 @@
 
     <meta name="twitter:card"  content="photo" />
     <meta name="twitter:title" content="Which one do you like?" />
-    <meta name="twitter:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>" />
-
+    <meta name="twitter:app:id:iphone" content="id727405659">
+    <meta name="twitter:app:url:iphone" content="https://itunes.apple.com/app/dochi/id727405659">
+    <meta name="twitter:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('600x800').url %>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="http://dochi.monaos.org<%= p0.process(:append, i0, i1).thumb('300x400').url %>" />
     <meta property="og:title" content="Which one do you like? - Dochi" />
