Added caption to web view.

--- a/app/views/decks/perma_link.erb
+++ b/app/views/decks/perma_link.erb
@@ -75,7 +75,7 @@ mixpanel.init("ae4a392cd2105add1f346b648b316b30");</script><!-- end mixpanel -->
             <div class="panel panel-default">
               <div class="panel-heading">
                 <div class="row">
-                  <div class="col-md-10"><img src="<%= @deck.user.avatar_url %>" style="width:30px" alt="user"></div>
+                  <div class="col-md-10"><img src="<%= @deck.user.avatar_url %>" style="width:30px" alt="user">&nbsp;&nbsp;<%= @deck.caption %></div>
                   <div class="col-md-2"><%= @deck.distance_of_created %></div>
                 </div>
               </div>
